# Redirect0

./: .env.example  .gitignore  COMMERCIAL-LICENSE.md  LICENSE  Makefile  README.ja.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
api/: .env.example  Cargo.toml  Dockerfile
api/src/: db.rs  main.rs  models.rs  state.rs  utils.rs
api/src/routes/: analytics.rs  create.rs  mod.rs  redirect.rs
db/: Dockerfile  init.sql  seed.sql
db/migrations/: 20250412000000_init.sql
frontend/: Dockerfile  README.md  next.config.js  package.json
frontend/app/: layout.tsx  not-found.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/history/: page.tsx
frontend/components/: analytics-chart.tsx  url-comparison.tsx  url-creator.tsx  url-list.tsx
frontend/components/layout/: footer.tsx  header.tsx
frontend/components/ui/: use-toast.ts
frontend/lib/: api.ts  utils.ts
nginx/: nginx.conf
